--- a/notebooks/Marx/damage_detection/roadsafe_work.ipynb
+++ b/notebooks/Marx/damage_detection/roadsafe_work.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -16,7 +16,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Saving all outputs under: /Users/Marcello/Desktop/damage_type_detection_boudingBox/runs\n"
+            "Saving all outputs under: /Users/Marcello/code/Arina-W/roadsafe-ai-detect-locate-notify/notebooks/Marx/damage_detection/runs\n"
           ]
         }
       ],
@@ -35,7 +35,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -43,43 +43,8 @@
           "output_type": "stream",
           "text": [
             "loading Roboflow workspace...\n",
-            "loading Roboflow project...\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Downloading Dataset Version Zip in road-damage-1 to yolov11:: 100%|██████████| 121495/121495 [00:06<00:00, 18597.74it/s]"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "Extracting Dataset Version Zip to road-damage-1 in yolov11:: 100%|██████████| 2806/2806 [00:01<00:00, 1812.17it/s]"
-          ]
-        },
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "DATA_YAML: /Users/Marcello/Desktop/damage_type_detection_boudingBox/road-damage-1/data.yaml\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n"
+            "loading Roboflow project...\n",
+            "DATA_YAML: /Users/Marcello/code/Arina-W/roadsafe-ai-detect-locate-notify/notebooks/Marx/damage_detection/road-damage-1/data.yaml\n"
           ]
         }
       ],
@@ -102,18 +67,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# model will run on the best wright found during the train\n",
         "# we reuse this best.pt file so we don't need to retrain the model\n",
         "model = YOLO(\"best.pt\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -139,12 +103,12 @@
         "# See class mapping\n",
         "print(\"Class mapping:\")\n",
         "for k, v in model.names.items():\n",
-        "    print(f\"{k} → {v}\")\n"
+        "    print(f\"{k} → {v}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -157,30 +121,30 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Ultralytics 8.3.186 🚀 Python-3.10.6 torch-2.2.2 CPU (Intel Core(TM) i9-9980HK 2.40GHz)\n",
-            "\u001b[34m\u001b[1mval: \u001b[0mFast image access ✅ (ping: 0.0±0.0 ms, read: 912.1±206.9 MB/s, size: 86.5 KB)\n",
-            "\u001b[K\u001b[34m\u001b[1mval: \u001b[0mScanning /Users/Marcello/Desktop/damage_type_detection_boudingBox/road-damage-1/valid/labels.cache... 260 images, 0 backgrounds, 0 corrupt: 100% ━━━━━━━━━━━━ 260/260 332881.3it/s 0.0s0s\n",
-            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 17/17 0.24it/s 1:11s\n",
+            "Ultralytics 8.3.187 🚀 Python-3.12.9 torch-2.2.2 CPU (Intel Core(TM) i9-9980HK 2.40GHz)\n",
+            "YOLO11s summary (fused): 100 layers, 9,414,735 parameters, 0 gradients, 21.3 GFLOPs\n",
+            "\u001b[34m\u001b[1mval: \u001b[0mFast image access ✅ (ping: 0.3±0.2 ms, read: 164.5±43.0 MB/s, size: 89.2 KB)\n",
+            "\u001b[K\u001b[34m\u001b[1mval: \u001b[0mScanning /Users/Marcello/code/Arina-W/roadsafe-ai-detect-locate-notify/notebooks/Marx/damage_detection/road-damage-1/valid/labels.cache... 260 images, 0 backgrounds, 0 corrupt: 100% ━━━━━━━━━━━━ 260/260 301248.4it/s 0.0s0s\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 17/17 0.22it/s 1:16s\n",
             "                   all        260        584      0.777      0.687       0.74      0.466\n",
             "                     0        115        170      0.747      0.765      0.776      0.483\n",
             "                     1         87        143      0.762       0.47      0.588      0.279\n",
             "                     2         55         78      0.905      0.858      0.899      0.671\n",
             "                     3         77        130      0.647      0.563      0.623      0.359\n",
             "                     4         54         63      0.824      0.778      0.817      0.539\n",
-            "Speed: 2.6ms preprocess, 258.0ms inference, 0.0ms loss, 1.1ms postprocess per image\n",
-            "Results saved to \u001b[1mruns/roadsafe_v11s_val\u001b[0m\n",
-            "Ultralytics 8.3.186 🚀 Python-3.10.6 torch-2.2.2 CPU (Intel Core(TM) i9-9980HK 2.40GHz)\n",
-            "\u001b[34m\u001b[1mval: \u001b[0mFast image access ✅ (ping: 0.0±0.0 ms, read: 961.6±228.5 MB/s, size: 86.7 KB)\n",
-            "\u001b[K\u001b[34m\u001b[1mval: \u001b[0mScanning /Users/Marcello/Desktop/damage_type_detection_boudingBox/road-damage-1/test/labels.cache... 138 images, 0 backgrounds, 0 corrupt: 100% ━━━━━━━━━━━━ 138/138 198836.8it/s 0.0s0s\n",
-            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 9/9 0.24it/s 37.5s\n",
+            "Speed: 2.8ms preprocess, 278.6ms inference, 0.0ms loss, 1.4ms postprocess per image\n",
+            "Ultralytics 8.3.187 🚀 Python-3.12.9 torch-2.2.2 CPU (Intel Core(TM) i9-9980HK 2.40GHz)\n",
+            "\u001b[34m\u001b[1mval: \u001b[0mFast image access ✅ (ping: 0.3±0.1 ms, read: 179.0±39.6 MB/s, size: 87.2 KB)\n",
+            "\u001b[K\u001b[34m\u001b[1mval: \u001b[0mScanning /Users/Marcello/code/Arina-W/roadsafe-ai-detect-locate-notify/notebooks/Marx/damage_detection/road-damage-1/test/labels... 138 images, 0 backgrounds, 0 corrupt: 100% ━━━━━━━━━━━━ 138/138 693.2it/s 0.2s\n",
+            "\u001b[34m\u001b[1mval: \u001b[0mNew cache created: /Users/Marcello/code/Arina-W/roadsafe-ai-detect-locate-notify/notebooks/Marx/damage_detection/road-damage-1/test/labels.cache\n",
+            "\u001b[K                 Class     Images  Instances      Box(P          R      mAP50  mAP50-95): 100% ━━━━━━━━━━━━ 9/9 0.19it/s 46.5s\n",
             "                   all        138        330      0.736      0.728      0.755      0.473\n",
             "                     0         59         91      0.719      0.747      0.761      0.494\n",
             "                     1         45         84      0.608      0.536       0.54      0.275\n",
             "                     2         32         47      0.899      0.894      0.894      0.659\n",
             "                     3         35         58      0.628      0.603      0.675      0.401\n",
             "                     4         33         50      0.827      0.859      0.903      0.534\n",
-            "Speed: 2.5ms preprocess, 255.3ms inference, 0.0ms loss, 1.2ms postprocess per image\n",
-            "Results saved to \u001b[1mruns/roadsafe_v11s_test\u001b[0m\n",
+            "Speed: 3.0ms preprocess, 317.8ms inference, 0.0ms loss, 1.7ms postprocess per image\n",
             "Val saved to: runs/roadsafe_v11s_val\n",
             "Test saved to: runs/roadsafe_v11s_test\n"
           ]
@@ -190,26 +154,27 @@
         "val_metrics = model.val(\n",
         "    data=DATA_YAML,\n",
         "    split=\"val\",\n",
-        "    plots=True,\n",
-        "    project=RUN_ROOT,        # <- local folder\n",
+        "    plots=False,      # <- disable plots so lzma isn't needed\n",
+        "    project=RUN_ROOT,\n",
         "    name=\"roadsafe_v11s_val\",\n",
         "    exist_ok=True\n",
         ")\n",
         "test_metrics = model.val(\n",
         "    data=DATA_YAML,\n",
         "    split=\"test\",\n",
-        "    plots=True,\n",
+        "    plots=False,      # <- same here\n",
         "    project=RUN_ROOT,\n",
         "    name=\"roadsafe_v11s_test\",\n",
         "    exist_ok=True\n",
         ")\n",
+        "\n",
         "print(\"Val saved to:\",  val_metrics.save_dir)\n",
         "print(\"Test saved to:\", test_metrics.save_dir)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -224,51 +189,51 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "0: 800x800 1 2, 1 3, 248.5ms\n",
-            "1: 800x800 1 3, 248.5ms\n",
-            "2: 800x800 3 0s, 1 4, 248.5ms\n",
-            "3: 800x800 1 2, 248.5ms\n",
-            "4: 800x800 1 0, 248.5ms\n",
-            "5: 800x800 2 2s, 248.5ms\n",
-            "6: 800x800 1 1, 248.5ms\n",
-            "7: 800x800 3 0s, 248.5ms\n",
-            "8: 800x800 1 2, 1 4, 248.5ms\n",
-            "9: 800x800 1 2, 248.5ms\n",
-            "10: 800x800 1 2, 1 4, 248.5ms\n",
-            "11: 800x800 2 2s, 248.5ms\n",
-            "12: 800x800 1 2, 2 4s, 248.5ms\n",
-            "13: 800x800 1 4, 248.5ms\n",
-            "14: 800x800 1 3, 248.5ms\n",
-            "15: 800x800 2 3s, 248.5ms\n",
-            "16: 800x800 1 0, 248.5ms\n",
-            "17: 800x800 2 3s, 1 4, 248.5ms\n",
-            "18: 800x800 1 2, 248.5ms\n",
-            "19: 800x800 2 3s, 248.5ms\n",
-            "Speed: 5.2ms preprocess, 248.5ms inference, 0.9ms postprocess per image at shape (1, 3, 800, 800)\n",
+            "0: 800x800 1 2, 1 3, 305.5ms\n",
+            "1: 800x800 1 3, 305.5ms\n",
+            "2: 800x800 3 0s, 1 4, 305.5ms\n",
+            "3: 800x800 1 2, 305.5ms\n",
+            "4: 800x800 1 0, 305.5ms\n",
+            "5: 800x800 2 2s, 305.5ms\n",
+            "6: 800x800 1 1, 305.5ms\n",
+            "7: 800x800 3 0s, 305.5ms\n",
+            "8: 800x800 1 2, 1 4, 305.5ms\n",
+            "9: 800x800 1 2, 305.5ms\n",
+            "10: 800x800 1 2, 1 4, 305.5ms\n",
+            "11: 800x800 2 2s, 305.5ms\n",
+            "12: 800x800 1 2, 2 4s, 305.5ms\n",
+            "13: 800x800 1 4, 305.5ms\n",
+            "14: 800x800 1 3, 305.5ms\n",
+            "15: 800x800 2 3s, 305.5ms\n",
+            "16: 800x800 1 0, 305.5ms\n",
+            "17: 800x800 2 3s, 1 4, 305.5ms\n",
+            "18: 800x800 1 2, 305.5ms\n",
+            "19: 800x800 2 3s, 305.5ms\n",
+            "Speed: 5.2ms preprocess, 305.5ms inference, 1.3ms postprocess per image at shape (1, 3, 800, 800)\n",
             "Results saved to \u001b[1mruns/roadsafe_v11s_pred_valid\u001b[0m\n",
             "Val predictions → runs/roadsafe_v11s_pred_valid\n",
             "\n",
-            "0: 800x800 1 2, 1 3, 1 4, 261.5ms\n",
-            "1: 800x800 1 3, 261.5ms\n",
-            "2: 800x800 3 0s, 261.5ms\n",
-            "3: 800x800 2 0s, 261.5ms\n",
-            "4: 800x800 1 2, 261.5ms\n",
-            "5: 800x800 1 2, 261.5ms\n",
-            "6: 800x800 1 2, 261.5ms\n",
-            "7: 800x800 1 2, 261.5ms\n",
-            "8: 800x800 1 3, 261.5ms\n",
-            "9: 800x800 3 3s, 261.5ms\n",
-            "10: 800x800 3 3s, 261.5ms\n",
-            "11: 800x800 1 3, 261.5ms\n",
-            "12: 800x800 1 2, 261.5ms\n",
-            "13: 800x800 2 3s, 261.5ms\n",
-            "14: 800x800 1 0, 261.5ms\n",
-            "15: 800x800 1 2, 261.5ms\n",
-            "16: 800x800 1 2, 261.5ms\n",
-            "17: 800x800 1 4, 261.5ms\n",
-            "18: 800x800 1 4, 261.5ms\n",
-            "19: 800x800 1 2, 261.5ms\n",
-            "Speed: 5.0ms preprocess, 261.5ms inference, 0.8ms postprocess per image at shape (1, 3, 800, 800)\n",
+            "0: 800x800 1 2, 1 3, 1 4, 288.0ms\n",
+            "1: 800x800 1 3, 288.0ms\n",
+            "2: 800x800 3 0s, 288.0ms\n",
+            "3: 800x800 2 0s, 288.0ms\n",
+            "4: 800x800 1 2, 288.0ms\n",
+            "5: 800x800 1 2, 288.0ms\n",
+            "6: 800x800 1 2, 288.0ms\n",
+            "7: 800x800 1 2, 288.0ms\n",
+            "8: 800x800 1 3, 288.0ms\n",
+            "9: 800x800 3 3s, 288.0ms\n",
+            "10: 800x800 3 3s, 288.0ms\n",
+            "11: 800x800 1 3, 288.0ms\n",
+            "12: 800x800 1 2, 288.0ms\n",
+            "13: 800x800 2 3s, 288.0ms\n",
+            "14: 800x800 1 0, 288.0ms\n",
+            "15: 800x800 1 2, 288.0ms\n",
+            "16: 800x800 1 2, 288.0ms\n",
+            "17: 800x800 1 4, 288.0ms\n",
+            "18: 800x800 1 4, 288.0ms\n",
+            "19: 800x800 1 2, 288.0ms\n",
+            "Speed: 5.3ms preprocess, 288.0ms inference, 0.7ms postprocess per image at shape (1, 3, 800, 800)\n",
             "Results saved to \u001b[1mruns/roadsafe_v11s_pred_test\u001b[0m\n",
             "Test predictions → runs/roadsafe_v11s_pred_test\n"
           ]
@@ -306,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -343,9 +308,7 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "eis2q9Dp4s7D"
-      },
+      "metadata": {},
       "outputs": [],
       "source": []
     }
@@ -357,7 +320,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "roadsafe",
+      "display_name": "roadsafe_env",
       "language": "python",
       "name": "python3"
     },
@@ -371,7 +334,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.6"
+      "version": "3.12.9"
     }
   },
   "nbformat": 4,
